--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "fastapi>=0.114.1",
     "uvicorn[standard]>=0.30.6",
+    "requests>=2.32.3",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
