--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.114.1",
     "uvicorn[standard]>=0.30.6",
     "requests>=2.32.3",
+    "pandas>=2.2.2",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
