--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "uvicorn[standard]>=0.30.6",
     "requests>=2.32.3",
     "pandas>=2.2.2",
+    "PyMySQL>=1.1.1",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
